[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interface/UserInterface.gd" type="Script" id=1]
[ext_resource path="res://Assets/green_checkmark.png" type="Texture" id=2]
[ext_resource path="res://Assets/crosshair026.png" type="Texture" id=3]
[ext_resource path="res://Assets/red_cross.png" type="Texture" id=4]
[ext_resource path="res://Assets/NotoSansCJKsc-Regular.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 5 )

[node name="UserInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot0" type="Sprite" parent="."]
position = Vector2( 416, 608 )
texture = ExtResource( 3 )

[node name="PreviewPosition" type="Position2D" parent="Slot0"]

[node name="Slot1" type="Sprite" parent="."]
position = Vector2( 480, 608 )
texture = ExtResource( 3 )

[node name="PreviewPosition" type="Position2D" parent="Slot1"]

[node name="Slot2" type="Sprite" parent="."]
position = Vector2( 544, 608 )
texture = ExtResource( 3 )

[node name="PreviewPosition" type="Position2D" parent="Slot2"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="BlackScreen" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadLayer" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="TextureButton" parent="CanvasLayer/DeadLayer"]
margin_left = 512.0
margin_top = 320.0
margin_right = 576.0
margin_bottom = 384.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="TextureButton" parent="CanvasLayer/DeadLayer"]
margin_left = 384.0
margin_top = 320.0
margin_right = 448.0
margin_bottom = 384.0
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/DeadLayer"]
margin_left = 240.0
margin_top = 224.0
margin_right = 720.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 1 )
text = "Continue?"
align = 1
valign = 1
[connection signal="button_up" from="CanvasLayer/DeadLayer/YesButton" to="." method="_on_YesButton_button_up"]
